@@ -113,6 +113,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #27275: Fixed implementation of pop() and popitem() methods in
+  subclasses of accelerated OrderedDict.
+
 - Issue #28255: calendar.TextCalendar().prmonth() no longer prints a space
   at the start of new line after printing a month's calendar.  Patch by
   Xiang Zhang.
